# CommonCPP

./: CMakeLists.txt  README.md
Include/CommonCPP/: BasicDataTypes.hpp  CompilerDetection.hpp  Keywords.hpp  Packed.hpp  PlatformDetection.hpp
